# easy-painter

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py  worker.py
backend/app/api/: __init__.py  admin_routes.py  auth_routes.py  routes.py  user_routes.py
backend/app/core/: auth.py  config.py  logging.py  network.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  gallery_like.py  generation_job.py  model_config.py  upstream_provider.py  user.py
backend/app/schemas/: __init__.py  auth.py  job.py
backend/app/services/: model_service.py  rate_limit.py  redis_client.py  reference_images.py  storage.py  tasks.py  upstream.py
backend/tests/: test_admin_storage_cleanup.py  test_image_aspect_ratio.py  test_model_capabilities.py  test_network.py  test_reference_images.py
deploy/nginx/: Dockerfile  default.conf.template
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  router.ts  style.css
frontend/src/components/: AppHeader.vue  CurrentJobCard.vue  GalleryGrid.vue  GeneratePanel.vue  HeroSection.vue  PromptModal.vue  SiteFooter.vue
frontend/src/composables/: usePollingJob.ts
frontend/src/lib/: api.ts  auth.ts  theme.ts  types.ts
frontend/src/pages/: AdminPage.vue  HomePage.vue  LoginPage.vue  PublicGalleryPage.vue
